# vtuber-project

./: .gitignore  LICENSE  README.md
src/avatar_builder/: index.html  package-lock.json  package.json
src/avatar_builder/electron/: main.js
src/avatar_builder/src/: App.tsx  index.css
src/avatar_builder/src/components/: Layout.tsx
src/avatar_builder/src/components/modeling/: ModelingCanvas.tsx  ToolPanel.tsx
src/avatar_builder/src/components/rigging/: BlendshapePanel.tsx  BoneHierarchy.tsx
src/avatar_builder/src/contexts/: MotionContext.tsx
src/avatar_builder/src/pages/: Home.tsx  Modeling.tsx  Rigging.tsx  Settings.tsx  Texturing.tsx
src/motion_engine/: CMakeLists.txt
src/motion_engine/include/: camera_input.hpp  face_tracker.hpp  ws_server.hpp
src/motion_engine/src/: camera_input.cpp  face_tracker.cpp  main.cpp  ws_server.cpp
src/obs_plugin/: CMakeLists.txt
src/obs_plugin/src/: obs_vtuber_plugin.cpp
